lesma/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lesma
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
