lesma/40-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesma
  namespace: lesma
  labels:
    app: lesma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lesma
  template:
    metadata:
      labels:
        app: lesma
    spec:
      securityContext:
        runAsUser: 100
        runAsGroup: 100
        fsGroup: 100
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: registry.gitlab.com/ogarcia/lesma:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: data
              mountPath: /var/lib/lesma
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lesma-data
