lesma/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesma
  namespace: lesma
  labels:
    app: lesma
spec:
  type: ClusterIP
  selector:
    app: lesma
  ports:
    - name: http
      port: 80
      targetPort: http
