lesma/65-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lesma
  namespace: lesma
spec:
  parentRefs:
    - name: internal-gateway
      namespace: istio-system
  hostnames:
    - "lesma.czcx.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lesma
          port: 80
